add font family

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 html {
     box-sizing: border-box;
 }
+
+body {
+font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
+
+}
+
+h2 {
+
+}
+
+.hero {
+
+}
