--- a/style.css
+++ b/style.css
@@ -3,9 +3,17 @@ html {
 }
 
 body {
+color:#8B8B8B;
+font-size: 16px;
+text-align: center;
+font-weight: lighter;
 font-family: 'Montserrat', sans-serif;
+margin: 60px 20px;
 }
 
+.heroSection {
+
+}
 h1 {
 
 }
