--- a/style.css
+++ b/style.css
@@ -5,23 +5,32 @@ html {
 body {
 color:#8B8B8B;
 font-size: 16px;
-text-align: center;
 font-weight: lighter;
+text-align: center;
 font-family: 'Montserrat', sans-serif;
 margin: 60px 20px;
 }
 
-.heroSection {
-
+.heroImage {
+    width: 350px;
 }
-h1 {
 
+h1 {
+    color: black;
+    font-size: 28px;
 }
 
 h2 {
-
+    color: black;
+    font-size: 16px;
 }
 
-.hero {
+.button {
+    color: white;
+    font-size: 14px;
+}
 
+.menu {
+    color: #8B8B8B;
+    font-size: 13px;
 }
