--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 body {
 color:#8B8B8B;
 font-size: 16px;
-font-weight: lighter;
+font-weight: 300;
 text-align: center;
 font-family: 'Montserrat', sans-serif;
 margin: 60px 20px;
