--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ margin: 60px 20px;
 h1 {
     color: black;
     font-size: 28px;
+    margin-bottom: 0;
+    margin-top: 40px;
 }
 
 h2 {
@@ -25,6 +27,9 @@ h2 {
     font-size: 16px;
 }
 
+.hero p {
+    margin: 30px 0;
+}
 .button {
     color: white;
     font-size: 14px;
