--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ font-size: 16px;
 font-weight: 300;
 text-align: center;
 font-family: 'Montserrat', sans-serif;
-margin: 60px 20px;
+}
+
+section {
+    margin: 60px 20px;
 }
 
 .heroImage {
@@ -28,11 +31,24 @@ h2 {
 }
 
 .hero p {
-    margin: 30px 0;
+    margin: 30px 0 40px 0;
 }
-.button {
+
+button {
     color: white;
     font-size: 14px;
+    font-weight: normal;
+    background-color: #407BFF;
+    border-radius: 20px;
+    padding: 11px 30px;
+    text-decoration: none;
+    margin: 10px auto;
+    display: block;
+    border: none;
+}
+
+.button.secondary {
+    background-color: #8B8B8B;
 }
 
 .menu {
