--- a/style.css
+++ b/style.css
@@ -55,7 +55,19 @@ button {
 .sluzbyKancelare p {
     margin: 15px 0 28px 0;
 }
+
 .menu {
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px #407BFF1F;
+    margin: 15px 0;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.menu a {
+    text-decoration: none;
     color: #8B8B8B;
     font-size: 13px;
+    margin-left: 29px;
 }
