--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ text-align: center;
 font-family: 'Montserrat', sans-serif;
 }
 
+p {
+    margin: 15px 0 30px 0;
+}
+
 section {
     margin: 60px 20px;
 }
@@ -31,8 +35,9 @@ h2 {
     margin: 0;
 }
 
+
 .hero p {
-    margin: 30px 0 40px 0;
+    margin: 30px 0;
 }
 
 button {
@@ -52,9 +57,6 @@ button {
     background-color: #8B8B8B;
 }
 
-.sluzbyKancelare p {
-    margin: 15px 0 28px 0;
-}
 
 .menu {
     border-radius: 10px;
