--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ h2 {
     margin: 0;
 }
 
-
 .hero p {
     margin: 30px 0;
 }
@@ -57,7 +56,6 @@ button {
     background-color: #8B8B8B;
 }
 
-
 .menu {
     border-radius: 10px;
     box-shadow: 0px 4px 6px #407BFF1F;
@@ -72,4 +70,12 @@ button {
     color: #8B8B8B;
     font-size: 13px;
     margin-left: 29px;
+}
+
+@media screen and (min-width: 500px) {
+    
+}
+
+@media screen and (min-width: 1200px) {
+    
 }
