--- a/style.css
+++ b/style.css
@@ -72,8 +72,34 @@ button {
     margin-left: 29px;
 }
 
-@media screen and (min-width: 500px) {
-    
+@media screen and (min-width: 640px) {
+   button {
+       display: inline;
+       row-gap: 20px;
+       margin-right: 20px;
+   }
+    p {
+    min-width: 550px;
+    margin: 15px 89px 30px 89px;
+     }
+    .hero p {
+        margin: 30px 89px;}
+.kontejnerMenu{
+    display: flex;
+    /* justify-content: space-between; */justify-content: center;
+}
+   .menu {
+       display: block;
+       margin: 10px;
+       padding: 40px 15px 20px 15px
+   }
+  .menu a{
+      margin: 0;
+      display: block;
+  }
+ .menu img {
+     margin-bottom: 20px;
+ }
 }
 
 @media screen and (min-width: 1200px) {
