--- a/style.css
+++ b/style.css
@@ -77,31 +77,79 @@ button {
        display: inline;
        row-gap: 20px;
        margin-right: 20px;
-   }
+    }
     p {
     min-width: 550px;
     margin: 15px 89px 30px 89px;
      }
     .hero p {
         margin: 30px 89px;}
-.kontejnerMenu{
+    .kontejnerMenu{
     display: flex;
-    /* justify-content: space-between; */justify-content: center;
-}
+    justify-content: center;
+    }
    .menu {
        display: block;
        margin: 10px;
        padding: 40px 15px 20px 15px
    }
-  .menu a{
+   .menu a{
       margin: 0;
       display: block;
-  }
- .menu img {
+    }
+    .menu img {
      margin-bottom: 20px;
- }
+     }
 }
 
-@media screen and (min-width: 1200px) {
-    
+@media screen and (min-width: 1100px) {
+    .hero {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .heroImage {
+        order: 1;
+        flex-basis: calc((100% - 60px) / 2);
+        max-width: 525px;
+    }
+    .heroText {
+        flex-basis: calc((100% - 60px) / 2);
+        
+    }
+    body {
+        text-align: left;
+        margin: 0px auto;
+        padding: 60px 80px;
+    }
+
+    .hero p {
+    margin: 30px 0;
+    }
+    section {
+        margin-bottom: 80px;
+    }
+
+    .sluzby {
+        display: flex;
+        align-items: center;
+    }
+
+    .kontejnerText {
+        order: 1;
+        margin-left: 60px;
+    }
+    .kontejnerText p {
+        margin: 17px 0 0 0;
+    }
+    .kontejnerMenu, .kontejnerText {
+        flex-basis: 50%;
+    }
+ .kontejnerMenu.druhy {
+     order: 1;
+ } 
+ .kontejnerText.druhy{
+     margin:0
+ }
+
 }
