add kontejnerMenu margin

--- a/style.css
+++ b/style.css
@@ -79,14 +79,15 @@ button {
        margin-right: 20px;
     }
     p {
-    min-width: 550px;
-    margin: 15px 89px 30px 89px;
+        min-width: 550px;
+        margin: 15px 89px 30px 89px;
      }
     .hero p {
         margin: 30px 89px;}
+
     .kontejnerMenu{
-    display: flex;
-    justify-content: center;
+        display: flex;
+        justify-content: center;
     }
    .menu {
        display: block;
@@ -103,6 +104,14 @@ button {
 }
 
 @media screen and (min-width: 1100px) {
+      body {
+        max-width: 1040px;
+        text-align: left;
+        margin: 0px auto;
+    }
+    section {
+        margin-bottom: 80px;
+    }
     .hero {
         display: flex;
         align-items: center;
@@ -110,52 +119,43 @@ button {
     }
     .heroImage {
         order: 1;
-        flex-basis: calc((100% - 60px) / 2);
-        max-width: 525px;
+        flex-basis: calc((50% - 30px));
+        max-width: 425px;
+        margin: 0 auto;
     }
     .heroText {
-        flex-basis: calc((100% - 60px) / 2);
-        
+        padding-right: 60px;
     }
-    body {
-        max-width: 1040px;
-        text-align: left;
-        margin: 0px auto;
-        padding: 60px 80px;
-    }
-
     .hero p {
     margin: 30px 0;
     }
-    section {
-        margin-bottom: 80px;
+    .menu {
+        text-align: center;
+        width: 100%;
     }
-
+    .kontejnerText p {
+        margin: 17px 0 0 0;
+    }
     .sluzby {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
-
-    .kontejnerText {
+    .kontejnerText.prvni {
         order: 1;
-        
-    }
-    .kontejnerText p {
-        margin: 17px 0 0 0;
     }
     .kontejnerMenu  {
-      flex-basis: 550px;
+        flex-basis: calc(50% + 30px);
+        width: 550px;
     }
-    
+    .kontejnerMenu.prvni {
+        margin-right: 60px;
+    }
     .kontejnerMenu.druhy {
-        order: 1;
-    } 
-    .kontejnerText.druhy{
-        margin:0;
+        margin-left: 60px;
     }
-    .menu {
-        text-align: center;
+    .kontejnerText {
+        flex-basis: calc(50% - 30px); 
+        flex-grow: 0;
     }
-
 }
